# experiments

./: .gitignore  Fin-inj.agda  FreeDomain.hs  LazyCont.hs  Makefile  Natural.hs  Partial.hs  PreludePlus.hs  analytic_continuation.hs  anonymous_typeclass.hs  beats.hs  bind.hs  boolspace.agda  cat.hs  category.agda  catty.lhs  ccc.hs  church_pair_free_theorem.v  churchtreething.hs  composemonads.hs  composite.hs  constrained-categories.hs  cotraversable.hs  cps.hs  creal.hs  currytype.hs  declick.hs  deepmemo.hs  depvector.hs  deriv.hs  dfunctor.hs  dlog.hs  eqn.hs  exprec.hs  f-coalg.mkd  falgebra.hs  fgalgebra.hs  fibmod.hs  fixfree.hs  fixfree2.hs  (+60 more)
lookandsay/: elements.hs  extract.pl  graph.dot  lands2.htm
txview/: CMakeLists.txt  txview  txview.cpp
